server/src/rust/src/bind/capability_rust.rs

mod capability_c {
  #![allow(unused_imports)]
  use super::*;

  #[link(name="capability_c")]
  extern "C" {
      pub fn l4_cap_task_new_1(cap: c_ulong) -> L4CapTask;
      pub fn l4_cap_task_new_2(cap: c_uint) -> L4CapTask;
      pub fn l4_cap_task_new_3(idx: c_ulong) -> L4CapTask;
      pub fn l4_cap_task_new_4(_1: c_uint) -> L4CapTask;
      pub fn l4_cap_task_move_1(__self: *const L4CapTask, src: *const L4CapTask) -> L4CapTask;
      pub fn l4_cap_task_copy_1(__self: *const L4CapTask, src: *const L4CapTask) -> L4CapTask;
      pub fn l4_cap_task_copy_2(_1: *const L4CapTask) -> L4CapTask;
      pub fn l4_cap_task_move_2(_1: *mut L4CapTask) -> L4CapTask;
      pub fn l4_cap_task_delete(__self: *const L4CapTask);
      pub fn l4_cap_task_new_task(o: *const L4CapTask) -> L4CapTask;
      pub fn l4_cap_task_cap(__self: *const L4CapTask) -> c_ulong;
      pub fn l4_cap_task_is_valid(__self: *const L4CapTask) -> c_int;
      pub fn l4_cap_task_snd_base(__self: *const L4CapTask, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_task_invalidate(__self: *mut L4CapTask);
      pub fn l4_cap_kobject_new_1(cap: c_ulong) -> L4CapKobject;
      pub fn l4_cap_kobject_new_2(cap: c_uint) -> L4CapKobject;
      pub fn l4_cap_kobject_new_3(idx: c_ulong) -> L4CapKobject;
      pub fn l4_cap_kobject_new_4(_1: c_uint) -> L4CapKobject;
      pub fn l4_cap_kobject_move(__self: *const L4CapKobject, src: *const L4CapKobject) -> L4CapKobject;
      pub fn l4_cap_kobject_copy(__self: *const L4CapKobject, src: *const L4CapKobject) -> L4CapKobject;
      pub fn l4_cap_kobject_cap(__self: *const L4CapKobject) -> c_ulong;
      pub fn l4_cap_kobject_is_valid(__self: *const L4CapKobject) -> c_int;
      pub fn l4_cap_kobject_snd_base(__self: *const L4CapKobject, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_kobject_invalidate(__self: *mut L4CapKobject);
      pub fn l4_cap_meta_new_1(cap: c_ulong) -> L4CapMeta;
      pub fn l4_cap_meta_new_2(cap: c_uint) -> L4CapMeta;
      pub fn l4_cap_meta_new_3(idx: c_ulong) -> L4CapMeta;
      pub fn l4_cap_meta_new_4(_1: c_uint) -> L4CapMeta;
      pub fn l4_cap_meta_move(__self: *const L4CapMeta, src: *const L4CapMeta) -> L4CapMeta;
      pub fn l4_cap_meta_copy(__self: *const L4CapMeta, src: *const L4CapMeta) -> L4CapMeta;
      pub fn l4_cap_meta_cap(__self: *const L4CapMeta) -> c_ulong;
      pub fn l4_cap_meta_is_valid(__self: *const L4CapMeta) -> c_int;
      pub fn l4_cap_meta_snd_base(__self: *const L4CapMeta, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_meta_invalidate(__self: *mut L4CapMeta);
      pub fn l4_cap_void_new_1(p: *const c_void) -> L4CapVoid;
      pub fn l4_cap_void_new_2(cap: c_ulong) -> L4CapVoid;
      pub fn l4_cap_void_new_3(cap: c_uint) -> L4CapVoid;
      pub fn l4_cap_void_new_4(idx: c_ulong) -> L4CapVoid;
      pub fn l4_cap_void_new_5(_1: c_uint) -> L4CapVoid;
      pub fn l4_cap_void_move_1(__self: *const L4CapVoid, src: *const L4CapVoid) -> L4CapVoid;
      pub fn l4_cap_void_copy_1(__self: *const L4CapVoid, src: *const L4CapVoid) -> L4CapVoid;
      pub fn l4_cap_void_copy_2(_1: *const L4CapVoid) -> L4CapVoid;
      pub fn l4_cap_void_move_2(_1: *mut L4CapVoid) -> L4CapVoid;
      pub fn l4_cap_void_delete(__self: *const L4CapVoid);
      pub fn l4_cap_void_new_void(o: *const L4CapVoid) -> L4CapVoid;
      pub fn l4_cap_void_cap(__self: *const L4CapVoid) -> c_ulong;
      pub fn l4_cap_void_is_valid(__self: *const L4CapVoid) -> c_int;
      pub fn l4_cap_void_snd_base(__self: *const L4CapVoid, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_void_invalidate(__self: *mut L4CapVoid);
      pub fn l4_cap_factory_new_1(cap: c_ulong) -> L4CapFactory;
      pub fn l4_cap_factory_new_2(cap: c_uint) -> L4CapFactory;
      pub fn l4_cap_factory_new_3(idx: c_ulong) -> L4CapFactory;
      pub fn l4_cap_factory_new_4(_1: c_uint) -> L4CapFactory;
      pub fn l4_cap_factory_move(__self: *const L4CapFactory, src: *const L4CapFactory) -> L4CapFactory;
      pub fn l4_cap_factory_copy(__self: *const L4CapFactory, src: *const L4CapFactory) -> L4CapFactory;
      pub fn l4_cap_factory_cap(__self: *const L4CapFactory) -> c_ulong;
      pub fn l4_cap_factory_is_valid(__self: *const L4CapFactory) -> c_int;
      pub fn l4_cap_factory_snd_base(__self: *const L4CapFactory, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_factory_invalidate(__self: *mut L4CapFactory);
      pub fn l4_cap_thread_new_1(cap: c_ulong) -> L4CapThread;
      pub fn l4_cap_thread_new_2(cap: c_uint) -> L4CapThread;
      pub fn l4_cap_thread_new_3(idx: c_ulong) -> L4CapThread;
      pub fn l4_cap_thread_new_4(_1: c_uint) -> L4CapThread;
      pub fn l4_cap_thread_move(__self: *const L4CapThread, src: *const L4CapThread) -> L4CapThread;
      pub fn l4_cap_thread_copy(__self: *const L4CapThread, src: *const L4CapThread) -> L4CapThread;
      pub fn l4_cap_thread_cap(__self: *const L4CapThread) -> c_ulong;
      pub fn l4_cap_thread_is_valid(__self: *const L4CapThread) -> c_int;
      pub fn l4_cap_thread_snd_base(__self: *const L4CapThread, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_thread_invalidate(__self: *mut L4CapThread);
      pub fn l4_cap_irq_new_1(cap: c_ulong) -> L4CapIrq;
      pub fn l4_cap_irq_new_2(cap: c_uint) -> L4CapIrq;
      pub fn l4_cap_irq_new_3(idx: c_ulong) -> L4CapIrq;
      pub fn l4_cap_irq_new_4(_1: c_uint) -> L4CapIrq;
      pub fn l4_cap_irq_move(__self: *const L4CapIrq, src: *const L4CapIrq) -> L4CapIrq;
      pub fn l4_cap_irq_copy(__self: *const L4CapIrq, src: *const L4CapIrq) -> L4CapIrq;
      pub fn l4_cap_irq_cap(__self: *const L4CapIrq) -> c_ulong;
      pub fn l4_cap_irq_is_valid(__self: *const L4CapIrq) -> c_int;
      pub fn l4_cap_irq_snd_base(__self: *const L4CapIrq, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_irq_invalidate(__self: *mut L4CapIrq);
      pub fn l4_cap_vm_new_1(cap: c_ulong) -> L4CapVm;
      pub fn l4_cap_vm_new_2(cap: c_uint) -> L4CapVm;
      pub fn l4_cap_vm_new_3(idx: c_ulong) -> L4CapVm;
      pub fn l4_cap_vm_new_4(_1: c_uint) -> L4CapVm;
      pub fn l4_cap_vm_move(__self: *const L4CapVm, src: *const L4CapVm) -> L4CapVm;
      pub fn l4_cap_vm_copy(__self: *const L4CapVm, src: *const L4CapVm) -> L4CapVm;
      pub fn l4_cap_vm_cap(__self: *const L4CapVm) -> c_ulong;
      pub fn l4_cap_vm_is_valid(__self: *const L4CapVm) -> c_int;
      pub fn l4_cap_vm_snd_base(__self: *const L4CapVm, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_vm_invalidate(__self: *mut L4CapVm);
      pub fn l4_cap_dataspace_new_1(cap: c_ulong) -> L4CapDataspace;
      pub fn l4_cap_dataspace_new_2(cap: c_uint) -> L4CapDataspace;
      pub fn l4_cap_dataspace_new_3(idx: c_ulong) -> L4CapDataspace;
      pub fn l4_cap_dataspace_new_4(_1: c_uint) -> L4CapDataspace;
      pub fn l4_cap_dataspace_move_1(__self: *const L4CapDataspace, src: *const L4CapDataspace) -> L4CapDataspace;
      pub fn l4_cap_dataspace_copy_1(__self: *const L4CapDataspace, src: *const L4CapDataspace) -> L4CapDataspace;
      pub fn l4_cap_dataspace_access(__self: *const L4CapDataspace) -> L4ReDataspace;
      pub fn l4_cap_dataspace_copy_2(_1: *const L4CapDataspace) -> L4CapDataspace;
      pub fn l4_cap_dataspace_move_2(_1: *mut L4CapDataspace) -> L4CapDataspace;
      pub fn l4_cap_dataspace_delete(__self: *const L4CapDataspace);
      pub fn l4_cap_dataspace_new_dataspace(o: *const L4CapDataspace) -> L4CapDataspace;
      pub fn l4_cap_dataspace_cap(__self: *const L4CapDataspace) -> c_ulong;
      pub fn l4_cap_dataspace_is_valid(__self: *const L4CapDataspace) -> c_int;
      pub fn l4_cap_dataspace_snd_base(__self: *const L4CapDataspace, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_dataspace_invalidate(__self: *mut L4CapDataspace);
      pub fn l4_cap_mem_alloc_new_1(cap: c_ulong) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_new_2(cap: c_uint) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_new_3(idx: c_ulong) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_new_4(_1: c_uint) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_move_1(__self: *const L4CapMemAlloc, src: *const L4CapMemAlloc) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_copy_1(__self: *const L4CapMemAlloc, src: *const L4CapMemAlloc) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_access(__self: *const L4CapMemAlloc) -> L4ReMemAlloc;
      pub fn l4_cap_mem_alloc_copy_2(_1: *const L4CapMemAlloc) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_move_2(_1: *mut L4CapMemAlloc) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_delete(__self: *const L4CapMemAlloc);
      pub fn l4_cap_mem_alloc_new_mem_alloc(o: *const L4CapMemAlloc) -> L4CapMemAlloc;
      pub fn l4_cap_mem_alloc_cap(__self: *const L4CapMemAlloc) -> c_ulong;
      pub fn l4_cap_mem_alloc_is_valid(__self: *const L4CapMemAlloc) -> c_int;
      pub fn l4_cap_mem_alloc_snd_base(__self: *const L4CapMemAlloc, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_mem_alloc_invalidate(__self: *mut L4CapMemAlloc);
      pub fn l4_cap_rm_new_1(cap: c_ulong) -> L4CapRm;
      pub fn l4_cap_rm_new_2(cap: c_uint) -> L4CapRm;
      pub fn l4_cap_rm_new_3(idx: c_ulong) -> L4CapRm;
      pub fn l4_cap_rm_new_4(_1: c_uint) -> L4CapRm;
      pub fn l4_cap_rm_move_1(__self: *const L4CapRm, src: *const L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_copy_1(__self: *const L4CapRm, src: *const L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_access(__self: *const L4CapRm) -> L4ReRm;
      pub fn l4_cap_rm_delete(__self: *const L4CapRm);
      pub fn l4_cap_rm_copy_2(_1: *const L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_move_2(_1: *mut L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_copy_assign(__self: *mut L4CapRm, _1: *const L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_move_assign(__self: *mut L4CapRm, _1: *mut L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_new_rm(o: *const L4CapRm) -> L4CapRm;
      pub fn l4_cap_rm_cap(__self: *const L4CapRm) -> c_ulong;
      pub fn l4_cap_rm_is_valid(__self: *const L4CapRm) -> c_int;
      pub fn l4_cap_rm_snd_base(__self: *const L4CapRm, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_rm_invalidate(__self: *mut L4CapRm);
      pub fn l4_cap_dummy_kobject_new_1(cap: c_ulong) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_new_2(cap: c_uint) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_new_3(idx: c_ulong) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_new_4(_1: c_uint) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_move_1(__self: *const L4CapDummyKobject, src: *const L4CapDummyKobject) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_copy_1(__self: *const L4CapDummyKobject, src: *const L4CapDummyKobject) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_access(__self: *const L4CapDummyKobject) -> DummyKobject;
      pub fn l4_cap_dummy_kobject_copy_2(_1: *const L4CapDummyKobject) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_move_2(_1: *mut L4CapDummyKobject) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_delete(__self: *const L4CapDummyKobject);
      pub fn l4_cap_dummy_kobject_new_dummy_kobject(o: *const L4CapDummyKobject) -> L4CapDummyKobject;
      pub fn l4_cap_dummy_kobject_cap(__self: *const L4CapDummyKobject) -> c_ulong;
      pub fn l4_cap_dummy_kobject_is_valid(__self: *const L4CapDummyKobject) -> c_int;
      pub fn l4_cap_dummy_kobject_snd_base(__self: *const L4CapDummyKobject, grant: c_uint, base: c_ulong) -> c_ulong;
      pub fn l4_cap_dummy_kobject_invalidate(__self: *mut L4CapDummyKobject);
  }
}

type L4CapIdxT = c_ulong;
type L4UmwordT = c_ulong;

#[repr(C)]
union L4CapTaskUnion {
    mem: [c_char; 8],
    ptr: *mut c_void,
}

#[repr(C)]
pub struct L4CapTask {
    obj : L4CapTaskUnion,

    is_const: c_char,
    is_owning: c_char,
}

impl L4CapTask {
    pub unsafe fn new_1(cap: c_ulong) -> L4CapTask {
        let _cap: c_ulong;

        _cap = cap as c_ulong;
